[tool.poetry]
name = "pdf-interpreter"
version = "0.1.0"
description = ""
authors = ["takumi-nishimura <clp13218@nitech.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
python-dotenv = "^1.0.1"
langchain = "^0.1.16"
langchain-community = "^0.0.33"
pypdf = "^4.2.0"
streamlit = "^1.33.0"
openai = "^1.19.0"
langchain-openai = "^0.1.3"
tiktoken = "^0.6.0"
qdrant-client = "^1.8.2"
llama-cpp-python = "^0.2.61"
transformers = "^4.40.0"
chromadb = "^0.4.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
